# Smart-Buggeter-App

./: .gitignore  DEPLOYMENT.md  Dockerfile  NETLIFY_DEPLOY.md  PROJECT_STATUS.md  README.md  RENDER_CONFIG_VALUES.md  RENDER_DEPLOY.md  RENDER_FRONTEND_DEPLOY.md  docker-compose.yml  netlify.toml
backend/: .gitignore  Dockerfile.local  pyproject.toml  replit.md  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_usersession.py
backend/billsplit/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/budgeter/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/budgets/: admin.py  models.py  serializers.py  urls.py  views.py
backend/budgets/migrations/: 0001_initial.py
backend/core/: admin.py  middleware.py  models.py
backend/core/management/commands/: init_categories.py
backend/core/migrations/: 0001_initial.py
backend/docs/: DEPLOYMENT.md  postman_collection.json
backend/exports/: urls.py  views.py
backend/ml_engine/: classifier.py  serializers.py  urls.py  views.py
backend/notifications/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/transactions/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/transactions/migrations/: 0001_initial.py
docs/: API.md  DEPLOYMENT.md  ERD.md  QUICK_START.md  SEQUENCE_DIAGRAMS.md  SUMMARY.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
scripts/: setup.sh
(+34 files in other folders)
